--- a/Inventaire/BillingManagement.UI.csproj
+++ b/Inventaire/BillingManagement.UI.csproj
@@ -51,7 +51,7 @@
 
   <ItemGroup>
     <None Update="BillingManagement.db">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
   </ItemGroup>
 
